--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,16 +4,9 @@
     box-sizing: border-box;
 }
 
-.game-board {
-    width: 80%;
-    height: 434px;
+#janela-do-jogo {
+    width: 600px;
+    height: 400px;
     border: 2px solid black;
     margin: auto;
-    position:relative;
-}
-
-#cenario1 {
-    position: absolute;
-    bottom: 0;
-    
 }
