--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,28 +4,25 @@
     box-sizing: border-box;
 }
 
-.mundo-do-jogo {
-    width: 80%;
-    height: 435px;
+#mundo-do-jogo {
+    width: 600px;
+    height: 400px;
     border: 2px solid black;
-    margin: auto;
-    top: 100px;
-    position: relative;
 
 }
 
+/*
 .cenario {
-    position: absolute;
+    position: relative;
     bottom: 0;
-    animation: cenario1-animacao 5s;
-    background: fixed;
+   
+  
 }
 
-.mario{
+#mario{
     width: 20px;
     position: absolute;
-    bottom: 48px;
-}
-
-
+    bottom: 47px;
+  
+}*/
 
